<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pyvesc</name>
  <version>1.0.5</version>
  <description>Python implementation of the VESC communication protocol.</description>
  <maintainer email="liambindle@gmail.com">Liam Bindle</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python-crccheck-pip</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
